# hentai-downloader-v2

./: .gitignore  Cargo.toml  README.md
src/: main.rs
