[package]
name = "hentai-downloader-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = "0.12.4"
roxmltree = "0.19.0"
tokio = "1.37.0"
